--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,11 @@ project_urls =
 packages = find:
 install_requires =
     humanize>=3.12
+    packaging>=21.2
+    platformdirs>=2.4
+    pypi-simple>=0.9
+    requests>=2.26
+    requests-cache>=0.8
     rich>=10.12
     backports.cached-property;python_version<"3.8"
     importlib-metadata>=4.8.1;python_version<"3.8"
@@ -96,6 +101,9 @@ skip_covered = false
 
 [mypy]
 strict = true
+
+[mypy-requests_cache.*]
+ignore_missing_imports = True
 
 [mypy-humanize.*]
 ignore_missing_imports = True
