--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,9 @@ setenv =
     {tty:MYPY_FORCE_COLOR = 1}
 deps =
     mypy==0.910
+    types-requests
 commands =
+    pip uninstall requests_cache -y
     mypy src/pypi_changes
     mypy tests
 
