--- a/setup.cfg
+++ b/setup.cfg
@@ -71,6 +71,8 @@ testing =
     pytest>=6.2
     pytest-cov>=2.12
     pytest-mock>=3.6
+    vcrpy>=4.1.1
+    virtualenv>=20.10
 
 [options.package_data]
 pypi_changes = py.typed
@@ -84,7 +86,7 @@ addopts = --tb=auto -ra --showlocals
 plugins = covdefaults
 
 [coverage:report]
-fail_under = 32
+fail_under = 89
 
 [coverage:paths]
 source =
@@ -106,6 +108,12 @@ strict = true
 ignore_missing_imports = True
 
 [mypy-humanize.*]
+ignore_missing_imports = True
+
+[mypy-vcr.*]
+ignore_missing_imports = True
+
+[mypy-virtualenv.*]
 ignore_missing_imports = True
 
 [flake8]
