--- a/setup.cfg
+++ b/setup.cfg
@@ -67,35 +67,30 @@ docs =
     sphinxcontrib-towncrier>=0.2.0a0
     towncrier>=21.3
 testing =
-    covdefaults>=1.2
+    covdefaults>=2
     pytest>=6.2
-    pytest-cov>=2.12
+    pytest-cov>=3
     pytest-mock>=3.6
     vcrpy>=4.1.1
-    virtualenv>=20.10
+    virtualenv>=20.11
 
 [options.package_data]
 pypi_changes = py.typed
 
-[tool:pytest]
-testpaths = tests
-junit_family = xunit2
-addopts = --tb=auto -ra --showlocals
-
 [coverage:run]
 plugins = covdefaults
 
-[coverage:report]
-fail_under = 100
-
 [coverage:paths]
-source =
+src =
     src
-    .tox*/*/lib/python*/site-packages
-    .tox*/pypy*/site-packages
-    .tox*\*\Lib\site-packages\
+    .tox/*/lib/python*/site-packages
+    .tox/pypy*/site-packages
+    .tox\*\Lib\site-packages\
     */src
     *\src
+
+[coverage:report]
+fail_under = 100
 
 [coverage:html]
 show_contexts = true
