--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,16 +10,9 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  pre_commit:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-      - uses: pre-commit/action@v2.0.0
-
   test:
-    name: test ${{ matrix.py }} - ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}-latest
+    name: test with ${{ matrix.py }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
@@ -29,9 +22,9 @@ jobs:
           - "3.8"
           - "3.7"
         os:
-          - Ubuntu
-          - Windows
-          - MacOs
+          - ubuntu-20.04
+          - windows-2022
+          - macos-10.15
     steps:
       - uses: actions/checkout@v2
         with:
@@ -48,26 +41,21 @@ jobs:
         run: tox -e py --skip-pkg-install
         env:
           PYTEST_ADDOPTS: "-vv --durations=20"
-      - uses: codecov/codecov-action@v1
-        with:
-          file: ./.tox/coverage.py.xml
-          flags: tests
-          name: ${{ matrix.py }} - ${{ matrix.os }}
 
   check:
-    name: check ${{ matrix.tox_env }} - ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}-latest
+    name: tox env ${{ matrix.tox_env }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        os:
-          - Windows
-          - Ubuntu
         tox_env:
           - type
           - dev
           - docs
           - pkg_meta
+        os:
+          - ubuntu-20.04
+          - windows-2022
         exclude:
           - { os: windows, tox_env: pkg_meta }
     steps:
@@ -87,8 +75,8 @@ jobs:
 
   publish:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-    needs: [check, test, pre_commit]
-    runs-on: ubuntu-latest
+    needs: [check, test]
+    runs-on: ubuntu-20.04
     steps:
       - name: Setup python to build package
         uses: actions/setup-python@v2
