--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v4.1.0
     hooks:
       - id: check-ast
       - id: check-builtin-literals
@@ -12,61 +12,47 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.29.0
+    rev: v2.30.0
     hooks:
       - id: pyupgrade
-        args: ["--py37-plus"]
+        args: [ "--py37-plus" ]
   - repo: https://github.com/PyCQA/isort
-    rev: 5.10.0
+    rev: 5.10.1
     hooks:
       - id: isort
   - repo: https://github.com/psf/black
-    rev: 21.10b0
+    rev: 21.12b0
     hooks:
       - id: black
-        args:
-          - --safe
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.19.0
+        args: [ --safe ]
+  - repo: https://github.com/asottile/blacken-docs
+    rev: v1.12.0
     hooks:
-      - id: setup-cfg-fmt
-        args:
-          - --min-py3-version
-          - "3.7"
-          - --max-py-version
-          - "3.10"
+      - id: blacken-docs
+        additional_dependencies: [ black==21.12b0 ]
+  - repo: https://github.com/pre-commit/pygrep-hooks
+    rev: v1.9.0
+    hooks:
+      - id: rst-backticks
   - repo: https://github.com/tox-dev/tox-ini-fmt
     rev: "0.5.1"
     hooks:
       - id: tox-ini-fmt
         args: [ "-p", "fix" ]
-  - repo: https://github.com/asottile/blacken-docs
-    rev: v1.11.0
+  - repo: https://github.com/asottile/setup-cfg-fmt
+    rev: v1.20.0
     hooks:
-      - id: blacken-docs
-        additional_dependencies:
-          - black==21.10b0
-  - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.9.0
-    hooks:
-      - id: rst-backticks
-  - repo: local
-    hooks:
-      - id: changelogs-rst
-        name: changelog filenames
-        language: fail
-        entry: "changelog files must be named ####.(feature|bugfix|doc|removal|misc).rst"
-        exclude: ^docs/changelog/(\d+\.(feature|bugfix|doc|removal|misc).rst|README.rst|template.jinja2)
-        files: ^docs/changelog/
+      - id: setup-cfg-fmt
+        args: [ --min-py3-version, "3.7", "--max-py-version", "3.10" ]
   - repo: https://github.com/PyCQA/flake8
     rev: 4.0.1
     hooks:
       - id: flake8
         additional_dependencies:
-        - flake8-bugbear==21.9.2
-        - flake8-comprehensions==3.7
-        - flake8-pytest-style==1.5
-        - flake8-spellcheck==0.24
-        - flake8-unused-arguments==0.0.7
-        - flake8-noqa==1.2
-        - pep8-naming==0.12.1
+          - flake8-bugbear==21.11.29
+          - flake8-comprehensions==3.7
+          - flake8-pytest-style==1.6
+          - flake8-spellcheck==0.24
+          - flake8-unused-arguments==0.0.9
+          - flake8-noqa==1.2.1
+          - pep8-naming==0.12.1
