--- a/setup.cfg
+++ b/setup.cfg
@@ -21,10 +21,6 @@ classifiers =
     Operating System :: POSIX
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
-    Programming Language :: Python :: 3.9
-    Programming Language :: Python :: 3.10
     Topic :: Software Development :: Libraries
     Topic :: Software Development :: Testing
     Topic :: Utilities
@@ -114,8 +110,9 @@ ignore_missing_imports = True
 [flake8]
 max-complexity = 22
 max-line-length = 120
-unused-arguments-ignore-abstract-functions = true
 noqa-require-code = true
+dictionaries = en_US,python,technical,django
+unused-arguments-ignore-abstract-functions = true
 
 [pep8]
 max-line-length = 120
