--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
     rev: v2.37.3
     hooks:
       - id: pyupgrade
-        args: [ "--py37-plus" ]
+        args: [ "--py36-plus" ]
   - repo: https://github.com/PyCQA/isort
     rev: 5.10.1
     hooks:
@@ -29,30 +29,29 @@ repos:
     rev: v1.12.1
     hooks:
       - id: blacken-docs
-        additional_dependencies: [ black==21.12b0 ]
+        additional_dependencies: [ black==22.6.0 ]
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.9.0
     hooks:
       - id: rst-backticks
+  - repo: https://github.com/asottile/setup-cfg-fmt
+    rev: v2.0.0
+    hooks:
+    - id: setup-cfg-fmt
   - repo: https://github.com/tox-dev/tox-ini-fmt
     rev: "0.5.2"
     hooks:
       - id: tox-ini-fmt
         args: [ "-p", "fix" ]
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v2.0.0
-    hooks:
-      - id: setup-cfg-fmt
-        args: [ --min-py3-version, "3.7", "--max-py-version", "3.10" ]
   - repo: https://github.com/PyCQA/flake8
-    rev: 5.0.2
+    rev: 5.0.3
     hooks:
       - id: flake8
         additional_dependencies:
-          - flake8-bugbear==21.11.29
-          - flake8-comprehensions==3.7
-          - flake8-pytest-style==1.6
-          - flake8-spellcheck==0.24
-          - flake8-unused-arguments==0.0.9
-          - flake8-noqa==1.2.1
-          - pep8-naming==0.12.1
+        - flake8-bugbear==22.7.1
+        - flake8-comprehensions==3.10.0
+        - flake8-pytest-style==1.6.0
+        - flake8-spellcheck==0.28.0
+        - flake8-unused-arguments==0.0.11
+        - flake8-noqa==1.2.8
+        - pep8-naming==0.13.1
