--- a/setup.cfg
+++ b/setup.cfg
@@ -32,15 +32,15 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    humanize>=3.12
-    packaging>=21.2
-    platformdirs>=2.4
-    pypi-simple>=0.9
-    requests>=2.26
-    requests-cache>=0.8
-    rich>=10.12
+    humanize>=4.2
+    packaging>=21.3
+    platformdirs>=2.5
+    pypi-simple>=0.10
+    requests>=2.28
+    requests-cache>=0.9
+    rich>=12.5
     backports.cached-property;python_version<"3.8"
-    importlib-metadata>=4.8.1;python_version<"3.8"
+    importlib-metadata>=4.12;python_version<"3.8"
 python_requires = >=3.7
 package_dir =
     =src
@@ -54,21 +54,21 @@ console_scripts =
 
 [options.extras_require]
 docs =
-    furo>=2021.8.17b43
-    sphinx>=4.1
-    sphinx-argparse-cli>=1.7
-    sphinx-autodoc-typehints>=1.12
-    sphinx-copybutton>=0.4
-    sphinx-inline-tabs>=2021.4.11b9
-    sphinxcontrib-towncrier>=0.2.0a0
-    towncrier>=21.3
+    furo>=2022.6.21
+    sphinx>=5.1
+    sphinx-argparse-cli>=1.9
+    sphinx-autodoc-typehints>=1.19
+    sphinx-copybutton>=0.5
+    sphinx-inline-tabs>=2022.1.2b11
+    sphinxcontrib-towncrier>=0.2.1a0
+    towncrier>=21.9.0rc1
 testing =
-    covdefaults>=2
-    pytest>=6.2
+    covdefaults>=2.2
+    pytest>=7.1
     pytest-cov>=3
-    pytest-mock>=3.6
-    vcrpy>=4.1.1
-    virtualenv>=20.11
+    pytest-mock>=3.8
+    vcrpy>=4.2
+    virtualenv>=20.16
 
 [options.package_data]
 pypi_changes = py.typed
