--- a/setup.cfg
+++ b/setup.cfg
@@ -32,15 +32,15 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    humanize>=4.2
+    humanize>=4.2.3
     packaging>=21.3
-    platformdirs>=2.5
+    platformdirs>=2.5.2
     pypi-simple>=0.10
-    requests>=2.28
-    requests-cache>=0.9
-    rich>=12.5
-    backports.cached-property;python_version<"3.8"
-    importlib-metadata>=4.12;python_version<"3.8"
+    requests>=2.28.1
+    requests-cache>=0.9.5
+    rich>=12.5.1
+    backports.cached-property>=1.0.2;python_version < "3.8"
+    importlib-metadata>=4.12;python_version < "3.8"
 python_requires = >=3.7
 package_dir =
     =src
@@ -55,20 +55,20 @@ console_scripts =
 [options.extras_require]
 docs =
     furo>=2022.6.21
-    sphinx>=5.1
+    sphinx>=5.1.1
     sphinx-argparse-cli>=1.9
-    sphinx-autodoc-typehints>=1.19
+    sphinx-autodoc-typehints>=1.19.1
     sphinx-copybutton>=0.5
     sphinx-inline-tabs>=2022.1.2b11
     sphinxcontrib-towncrier>=0.2.1a0
-    towncrier>=21.9.0rc1
+    towncrier>=21.9
 testing =
     covdefaults>=2.2
-    pytest>=7.1
+    pytest>=7.1.2
     pytest-cov>=3
-    pytest-mock>=3.8
+    pytest-mock>=3.8.2
     vcrpy>=4.2
-    virtualenv>=20.16
+    virtualenv>=20.16.2
 
 [options.package_data]
 pypi_changes = py.typed
