--- a/tox.ini
+++ b/tox.ini
@@ -47,7 +47,7 @@ setenv =
     {tty:MYPY_FORCE_COLOR = 1}
 deps =
     mypy==0.971
-    types-requests
+    types-requests>=2.28.7
 commands =
     mypy src/pypi_changes
     mypy tests
@@ -58,7 +58,7 @@ skip_install = true
 deps =
     build[virtualenv]>=0.8
     check-wheel-contents>=0.3.4
-    twine>=4
+    twine>=4.0.1
 commands =
     python -m build -o {envtmpdir} -s -w .
     twine check {envtmpdir}{/}*
@@ -76,9 +76,9 @@ commands =
 description = do a release, required posarg of the version number
 skip_install = true
 deps =
-    gitpython>=3.1
+    gitpython>=3.1.27
     packaging>=21.3
-    towncrier>=21.3
+    towncrier>=21.9
 commands =
     python {toxinidir}/tasks/release.py --version {posargs}
 
