--- a/setup.cfg
+++ b/setup.cfg
@@ -32,15 +32,15 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    humanize>=4.4
-    packaging>=21.3
-    platformdirs>=2.5.2
-    pypi-simple>=1
-    requests>=2.28.1
-    requests-cache>=0.9.7
-    rich>=12.6
+    humanize>=4.6
+    packaging>=23
+    platformdirs>=3.1
+    pypi-simple>=1.1
+    requests>=2.28.2
+    requests-cache>=1
+    rich>=13.3.1
     backports.cached-property>=1.0.2;python_version < "3.8"
-    importlib-metadata>=5;python_version < "3.8"
+    importlib-metadata>=6;python_version < "3.8"
 python_requires = >=3.7
 package_dir =
     =src
@@ -54,21 +54,21 @@ console_scripts =
 
 [options.extras_require]
 docs =
-    furo>=2022.9.29
-    sphinx>=5.3
-    sphinx-argparse-cli>=1.10
-    sphinx-autodoc-typehints>=1.19.5
-    sphinx-copybutton>=0.5
+    furo>=2022.12.7
+    sphinx>=6.1.3
+    sphinx-argparse-cli>=1.11
+    sphinx-autodoc-typehints!=1.23.4,>=1.22
+    sphinx-copybutton>=0.5.1
     sphinx-inline-tabs>=2022.1.2b11
     sphinxcontrib-towncrier>=0.2.1a0
-    towncrier>=22.8
+    towncrier>=22.12
 testing =
-    covdefaults>=2.2
-    pytest>=7.2
+    covdefaults>=2.2.2
+    pytest>=7.2.1
     pytest-cov>=4
     pytest-mock>=3.10
     vcrpy>=4.2.1
-    virtualenv>=20.16.6
+    virtualenv>=20.20
 
 [options.package_data]
 pypi_changes = py.typed
