--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,7 @@
 [tox]
-envlist =
+requires =
+    tox>=4.2
+env_list =
     fix
     py310
     py39
@@ -8,18 +10,19 @@ envlist =
     type
     pkg_meta
 skip_missing_interpreters = true
-minversion = 3.22
 
 [testenv]
 description = run the tests with pytest under {envname}
-passenv =
-    PYTEST_*
-    SSL_CERT_FILE
-setenv =
-    COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}{/}.coverage.{envname}}
-    COVERAGE_PROCESS_START = {toxinidir}{/}setup.cfg
+package = wheel
+wheel_build_env = .pkg
 extras =
     testing
+pass_env =
+    PYTEST_*
+    SSL_CERT_FILE
+set_env =
+    COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}{/}.coverage.{envname}}
+    COVERAGE_PROCESS_START = {toxinidir}{/}setup.cfg
 commands =
     pytest {tty:--color=yes} {posargs: --junitxml {toxworkdir}{/}junit.{envname}.xml \
       --cov {envsitepackagesdir}{/}pypi_changes --cov {toxinidir}{/}tests \
@@ -27,27 +30,25 @@ commands =
       --cov-report html:{envtmpdir}{/}htmlcov \
       --cov-report xml:{toxworkdir}{/}coverage.{envname}.xml \
       tests}
-package = wheel
-wheel_build_env = .pkg
 
 [testenv:fix]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
-passenv =
-    {[testenv]passenv}
-    PROGRAMDATA
 skip_install = true
 deps =
-    pre-commit>=3.2
+    pre-commit>=3.2.2
+pass_env =
+    {[testenv]passenv}
+    PROGRAMDATA
 commands =
     pre-commit run --all-files --show-diff-on-failure {tty:--color=always} {posargs}
 
 [testenv:type]
 description = run type check on code base
-setenv =
-    {tty:MYPY_FORCE_COLOR = 1}
 deps =
-    mypy==1.1.1
-    types-requests>=2.28.11.15
+    mypy==1.2
+    types-requests>=2.28.11.17
+set_env =
+    {tty:MYPY_FORCE_COLOR = 1}
 commands =
     mypy src/pypi_changes
     mypy tests
@@ -77,14 +78,14 @@ description = do a release, required posarg of the version number
 skip_install = true
 deps =
     gitpython>=3.1.31
-    packaging>=23
+    packaging>=23.1
     towncrier>=22.12
 commands =
     python {toxinidir}/tasks/release.py --version {posargs}
 
 [testenv:dev]
 description = dev environment with all deps at {envdir}
-usedevelop = true
+package = editable
 deps =
     {[testenv:release]deps}
 extras =
