--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,10 +12,10 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.1
+    rev: v3.3.2
     hooks:
       - id: pyupgrade
-        args: [ "--py37-plus" ]
+        args: ["--py37-plus"]
   - repo: https://github.com/PyCQA/isort
     rev: 5.12.0
     hooks:
@@ -24,38 +24,48 @@ repos:
     rev: 23.3.0
     hooks:
       - id: black
-        args: [ --safe ]
+        args: [--safe]
   - repo: https://github.com/asottile/blacken-docs
     rev: 1.13.0
     hooks:
       - id: blacken-docs
-        additional_dependencies: [ black==23.3 ]
-  - repo: https://github.com/pre-commit/pygrep-hooks
-    rev: v1.10.0
+        additional_dependencies: [black==23.3]
+  - repo: https://github.com/tox-dev/pyproject-fmt
+    rev: "0.11.1"
     hooks:
-      - id: rst-backticks
-  - repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v2.2.0
-    hooks:
-    - id: setup-cfg-fmt
+      - id: pyproject-fmt
+        additional_dependencies: [tox>=4.5.1]
   - repo: https://github.com/tox-dev/tox-ini-fmt
     rev: "1.3.0"
     hooks:
       - id: tox-ini-fmt
-        args: [ "-p", "fix" ]
+        args: ["-p", "fix"]
   - repo: https://github.com/PyCQA/flake8
     rev: 6.0.0
     hooks:
       - id: flake8
         additional_dependencies:
-        - flake8-bugbear==23.3.23
-        - flake8-comprehensions==3.12
-        - flake8-pytest-style==1.7.2
-        - flake8-spellcheck==0.28
-        - flake8-unused-arguments==0.0.13
-        - flake8-noqa==1.3.1
-        - pep8-naming==0.13.3
-  - repo: https://github.com/tox-dev/pyproject-fmt
-    rev: "0.10.0"
+          - flake8-bugbear==23.3.23
+          - flake8-comprehensions==3.12
+          - flake8-pytest-style==1.7.2
+          - flake8-spellcheck==0.28
+          - flake8-unused-arguments==0.0.13
+          - flake8-noqa==1.3.1
+          - pep8-naming==0.13.3
+          - flake8-pyproject==1.2.3
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "v2.7.1"
     hooks:
-    - id: pyproject-fmt
+      - id: prettier
+        additional_dependencies:
+          - prettier@2.7.1
+          - "@prettier/plugin-xml@2.2"
+        args: ["--print-width=120", "--prose-wrap=always"]
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.34.0
+    hooks:
+      - id: markdownlint
+  - repo: meta
+    hooks:
+      - id: check-hooks-apply
+      - id: check-useless-excludes
