--- a/setup.cfg
+++ b/setup.cfg
@@ -34,13 +34,13 @@ packages = find:
 install_requires =
     humanize>=4.6
     packaging>=23.1
-    platformdirs>=3.2
+    platformdirs>=3.5
     pypi-simple>=1.1
-    requests>=2.28.2
+    requests>=2.29
     requests-cache>=1.0.1
-    rich>=13.3.4
-    backports.cached-property>=1.0.2;python_version < "3.8"
-    importlib-metadata>=6.4.1;python_version < "3.8"
+    rich>=13.3.5
+    backports.cached-property>=1.0.2; python_version < "3.8"
+    importlib-metadata>=6.6; python_version < "3.8"
 python_requires = >=3.7
 package_dir =
     =src
@@ -55,11 +55,11 @@ console_scripts =
 [options.extras_require]
 docs =
     furo>=2023.3.27
-    sphinx>=6.1.3
+    sphinx>=6.2.1
     sphinx-argparse-cli>=1.11
     sphinx-autodoc-typehints!=1.23.4,>=1.23
     sphinx-copybutton>=0.5.2
-    sphinx-inline-tabs>=2022.1.2b11
+    sphinx-inline-tabs>=2023.4.21
     sphinxcontrib-towncrier>=0.2.1a0
     towncrier>=22.12
 testing =
@@ -68,7 +68,7 @@ testing =
     pytest-cov>=4
     pytest-mock>=3.10
     vcrpy>=4.2.1
-    virtualenv>=20.21
+    virtualenv>=20.23
 
 [options.package_data]
 pypi_changes = py.typed
