--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,8 @@ requires =
     tox>=4.2
 env_list =
     fix
+    py312
+    py311
     py310
     py39
     py38
@@ -22,11 +24,11 @@ pass_env =
     SSL_CERT_FILE
 set_env =
     COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}{/}.coverage.{envname}}
-    COVERAGE_PROCESS_START = {toxinidir}{/}setup.cfg
+    COVERAGE_PROCESS_START = {toxinidir}{/}pyproject.toml
 commands =
     pytest {tty:--color=yes} {posargs: --junitxml {toxworkdir}{/}junit.{envname}.xml \
       --cov {envsitepackagesdir}{/}pypi_changes --cov {toxinidir}{/}tests \
-      --cov-config=setup.cfg --no-cov-on-fail --cov-report term-missing:skip-covered --cov-context=test \
+      --cov-config=pyproject.toml --no-cov-on-fail --cov-report term-missing:skip-covered --cov-context=test \
       --cov-report html:{envtmpdir}{/}htmlcov \
       --cov-report xml:{toxworkdir}{/}coverage.{envname}.xml \
       tests}
