--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -18,16 +18,14 @@ jobs:
       fail-fast: false
       matrix:
         py:
-          - "3.12.0-beta.1"
+          - "3.12.0-beta.2"
           - "3.11"
           - "3.10"
           - "3.9"
-          - "3.8"
-          - "3.7"
         os:
-          - ubuntu-22.04
-          - windows-2022
-          - macos-12
+          - ubuntu-latest
+          - windows-latest
+          - macos-latest
     steps:
       - uses: actions/checkout@v3
         with:
@@ -57,8 +55,8 @@ jobs:
           - docs
           - pkg_meta
         os:
-          - ubuntu-22.04
-          - windows-2022
+          - ubuntu-latest
+          - windows-latest
         exclude:
           - { os: windows, tox_env: pkg_meta }
     steps:
