Fix missing console script
Signed-off-by: Bernát Gábor <bgabor8@bloomberg.net>

--- a/tox.ini
+++ b/tox.ini
@@ -65,19 +65,10 @@ commands =
     twine check {envtmpdir}{/}*
     check-wheel-contents --no-config {envtmpdir}
 
-[testenv:docs]
-description = build documentation
-extras =
-    docs
-commands =
-    sphinx-build -d "{envtmpdir}{/}doctree" docs "{toxworkdir}{/}docs_out" --color -b html {posargs}
-    python -c 'print(r"documentation available under file://{toxworkdir}{/}docs_out{/}index.html")'
-
 [testenv:dev]
 package = editable
-extras =
-    docs
-    testing
+deps =
+    {[testenv:type]deps}
 commands =
     python -m pip list --format=columns
     python -c "print(r'{envpython}')"
