--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,33 +44,24 @@ dependencies = [
   "humanize>=4.9",
   "packaging>=23.2",
   "platformdirs>=4.2",
-  "pypi-simple>=1.4.1",
+  "pypi-simple>=1.5",
   "requests>=2.31",
   "requests-cache>=1.2",
   "rich>=13.7",
 ]
-optional-dependencies.docs = [
-  "furo>=2023.9.10",
-  "sphinx>=7.2.6",
-  "sphinx-argparse-cli>=1.13",
-  "sphinx-autodoc-typehints>=2",
-  "sphinx-copybutton>=0.5.2",
-  "sphinx-inline-tabs>=2023.4.21",
-  "sphinxcontrib-towncrier>=0.2.1a0",
-  "towncrier>=23.11",
-]
 optional-dependencies.testing = [
   "covdefaults>=2.3",
-  "pytest>=8.0.1",
+  "pytest>=8.0.2",
   "pytest-cov>=4.1",
   "pytest-mock>=3.12",
   "urllib3<2",
   "vcrpy>=6.0.1",
-  "virtualenv>=20.25",
+  "virtualenv>=20.25.1",
 ]
-urls.Homepage = "http://pypi_changes.readthedocs.org"
+urls.Homepage = "https://github.com/gaborbernat/pypi_changes"
 urls.Source = "https://github.com/gaborbernat/pypi_changes"
 urls.Tracker = "https://github.com/gaborbernat/pypi_changes/issues"
+scripts.pypi-changes = "pypi_changes.__main__:main"
 
 [tool.hatch]
 build.hooks.vcs.version-file = "src/pypi_changes/_version.py"
@@ -120,14 +111,6 @@ report.fail_under = 98
 report.omit = []
 run.parallel = true
 run.plugins = ["covdefaults"]
-
-[tool.towncrier]
-name = "pypi_changes"
-filename = "docs/changelog.rst"
-directory = "docs/changelog"
-title_format = false
-issue_format = "`#{issue} <https://github.com/gaborbernat/pypi_changes/issues/{issue}>`_"
-template = "docs/changelog/template.jinja2"
 
 [tool.mypy]
 python_version = "3.11"
