--- a/tox.ini
+++ b/tox.ini
@@ -3,12 +3,13 @@ requires =
     tox>=4.2
 env_list =
     fix
-    py312
-    py311
-    py310
-    py39
     type
-    pkg_meta
+    readme
+    3.13
+    3.12
+    3.11
+    3.10
+    3.9
 skip_missing_interpreters = true
 
 [testenv]
@@ -19,7 +20,6 @@ extras =
     testing
 pass_env =
     PYTEST_*
-    SSL_CERT_FILE
 set_env =
     COVERAGE_FILE = {env:COVERAGE_FILE:{toxworkdir}{/}.coverage.{envname}}
     COVERAGE_PROCESS_START = {toxinidir}{/}pyproject.toml
@@ -35,7 +35,7 @@ commands =
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
 skip_install = true
 deps =
-    pre-commit>=3.6.2
+    pre-commit>=3.8
 pass_env =
     {[testenv]passenv}
     PROGRAMDATA
@@ -45,23 +45,21 @@ commands =
 [testenv:type]
 description = run type check on code base
 deps =
-    mypy==1.8
-    types-requests>=2.31.0.20240218
-set_env =
-    {tty:MYPY_FORCE_COLOR = 1}
+    mypy==1.11.2
+    types-requests>=2.32.0.20240907
 commands =
     mypy src/pypi_changes
     mypy tests
 
-[testenv:pkg_meta]
+[testenv:readme]
 description = check that the long description is valid
 skip_install = true
 deps =
-    build[virtualenv]>=1.0.3
+    build[uv]>=1.2.2
     check-wheel-contents>=0.6
-    twine>=5
+    twine>=5.1.1
 commands =
-    python -m build -o {envtmpdir} -s -w .
+    pyproject-build --installer uv --outdir {envtmpdir} --sdist --wheel .
     twine check {envtmpdir}{/}*
     check-wheel-contents --no-config {envtmpdir}
 
@@ -70,6 +68,5 @@ package = editable
 deps =
     {[testenv:type]deps}
 commands =
-    python -m pip list --format=columns
+    uv pip tree
     python -c "print(r'{envpython}')"
-uv_seed = true
