--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,32 +14,36 @@ concurrency:
 
 jobs:
   test:
-    name: test with ${{ matrix.py }}
+    name: test ${{ matrix.py }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         py:
+          - "3.13"
           - "3.12"
           - "3.11"
           - "3.10"
           - "3.9"
     steps:
-      - uses: actions/checkout@v4
+      - name: setup uv for tox
+        uses: yezz123/setup-uv@v4
+      - name: setup python for tox
+        uses: actions/setup-python@v5
         with:
-          fetch-depth: 0
-      - name: Setup python for test ${{ matrix.py }}
+          python-version: "3.12"
+      - name: install tox
+        run: uv pip install tox tox-uv --system
+      - uses: actions/checkout@v4
+      - name: setup python for test ${{ matrix.py }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.py }}
-      - name: Install tox
-        run: python -m pip install tox-uv
-      - name: Setup test suite
-        run: tox -e py -vv --notest
-      - name: Run test suite
-        run: tox -e py --skip-pkg-install
-        env:
-          PYTEST_ADDOPTS: "-vv --durations=20"
+          allow-prereleases: true
+      - name: setup test suite
+        run: tox run -vv --notest --skip-missing-interpreters false -e ${{ matrix.py }}
+      - name: run test suite
+        run: tox run  --skip-pkg-install -e ${{ matrix.py }}
 
   check:
     name: tox env ${{ matrix.tox_env }}
@@ -50,18 +54,18 @@ jobs:
         tox_env:
           - type
           - dev
-          - pkg_meta
+          - readme
     steps:
+      - name: setup uv for tox
+        uses: yezz123/setup-uv@v4
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Setup Python 3.12
+      - name: setup Python 3.12
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-      - name: Install tox
-        run: python -m pip install tox
-      - name: Run check for ${{ matrix.tox_env }}
-        run: tox -e ${{ matrix.tox_env }}
-        env:
-          UPGRADE_ADVISORY: "yes"
+      - name: install tox
+        run: uv pip install tox tox-uv --system
+      - name: Setup test suite
+        run: tox -vv --notest --skip-missing-interpreters false -e ${{ matrix.tox_env }}
+      - name: Run test suite
+        run: tox --skip-pkg-install -e ${{ matrix.tox_env }}
