--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 build-backend = "hatchling.build"
 requires = [
   "hatch-vcs>=0.4",
-  "hatchling>=1.21.1",
+  "hatchling>=1.25",
 ]
 
 [project]
@@ -37,6 +37,7 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
   "Topic :: Software Development :: Libraries",
   "Topic :: Software Development :: Testing",
   "Topic :: Utilities",
@@ -45,22 +46,22 @@ dynamic = [
   "version",
 ]
 dependencies = [
-  "humanize>=4.9",
-  "packaging>=23.2",
-  "platformdirs>=4.2",
-  "pypi-simple>=1.5",
-  "requests>=2.31",
-  "requests-cache>=1.2",
-  "rich>=13.7",
+  "humanize>=4.10",
+  "packaging>=24.1",
+  "platformdirs>=4.3.1",
+  "pypi-simple>=1.6",
+  "requests>=2.32.3",
+  "requests-cache>=1.2.1",
+  "rich>=13.8",
 ]
 optional-dependencies.testing = [
   "covdefaults>=2.3",
-  "pytest>=8.0.2",
-  "pytest-cov>=4.1",
-  "pytest-mock>=3.12",
+  "pytest>=8.3.2",
+  "pytest-cov>=5",
+  "pytest-mock>=3.14",
   "urllib3<2",
   "vcrpy>=6.0.1",
-  "virtualenv>=20.25.1",
+  "virtualenv>=20.26.4",
 ]
 urls.Homepage = "https://github.com/gaborbernat/pypi_changes"
 urls.Source = "https://github.com/gaborbernat/pypi_changes"
@@ -74,36 +75,47 @@ version.source = "vcs"
 [tool.ruff]
 target-version = "py39"
 line-length = 120
-select = [
+format.preview = true
+format.docstring-code-line-length = 100
+format.docstring-code-format = true
+lint.select = [
   "ALL",
 ]
-isort = { known-first-party = [
+lint.ignore = [
+  "ANN101", # no type annotation for self
+  "ANN401", # allow Any as type annotation
+  "COM812", # Conflict with formatter
+  "CPY",    # No copyright statements
+  "D203",   # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
+  "D212",   # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
+  "DOC",    # no support
+  "ISC001", # Conflict with formatter
+  "S104",   # Possible binding to all interface
+]
+lint.per-file-ignores."tests/**/*.py" = [
+  "D",       # don't care about documentation in tests
+  "FBT",     # don't care about booleans as positional arguments in tests
+  "INP001",  # no implicit namespace
+  "PLC2701", # allow private import
+  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
+  "S101",    # asserts allowed in tests≈
+  "S603",    # `subprocess` call: check for execution of untrusted input
+]
+lint.isort = { known-first-party = [
   "pypi_changes",
 ], required-imports = [
   "from __future__ import annotations",
 ] }
-ignore = [
-  "CPY",    # No copyright header
-  "INP001", # no implicit namespaces here
-  "ANN101", # no type annotation for self
-  "ANN401", # allow Any as type annotation
-  "D203",   # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
-  "D212",   # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
-  "S104",   # Possible binding to all interface
-]
-per-file-ignores."tests/**/*.py" = [
-  "S101",    # asserts allowed in tests...
-  "FBT",     # don't care about booleans as positional arguments in tests
-  "D",       # don"t care about documentation in tests
-  "S603",    # `subprocess` call: check for execution of untrusted input
-  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
-]
+lint.preview = true
 
 [tool.codespell]
 builtin = "clear,usage,en-GB_to_en-US"
 write-changes = true
 count = true
 skip = "*.yaml"
+
+[tool.pyproject-fmt]
+max_supported_python = "3.13"
 
 [tool.coverage]
 html.show_contexts = true
