--- a/tox.toml
+++ b/tox.toml
@@ -53,8 +53,8 @@ commands = [
 
 [env.type]
 description = "run type check on code base"
-deps = [ "mypy==1.18.2", "types-requests>=2.32.4.20250913" ]
-commands = [ [ "mypy", "src", "tests", { replace = "posargs", extend = true } ] ]
+deps = [ "ty>=0.0.17" ]
+commands = [ [ "ty", "check", "--output-format", "concise", "--error-on-warning", "." ] ]
 
 [env.dev]
 description = "generate a DEV environment"
