--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,19 @@ dependencies = [
   "requests-cache>=1.2.1",
   "rich>=14.1",
 ]
-optional-dependencies.testing = [
+urls.Homepage = "https://github.com/gaborbernat/pypi_changes"
+urls.Source = "https://github.com/gaborbernat/pypi_changes"
+urls.Tracker = "https://github.com/gaborbernat/pypi_changes/issues"
+scripts.pypi-changes = "pypi_changes.__main__:main"
+
+[dependency-groups]
+dev = [
+  { include-group = "lint" },
+  { include-group = "pkg-meta" },
+  { include-group = "test" },
+  { include-group = "type" },
+]
+test = [
   "covdefaults>=2.3",
   "pytest>=8.4.2",
   "pytest-cov>=7",
@@ -64,10 +76,9 @@ optional-dependencies.testing = [
   "vcrpy>=7",
   "virtualenv>=20.34",
 ]
-urls.Homepage = "https://github.com/gaborbernat/pypi_changes"
-urls.Source = "https://github.com/gaborbernat/pypi_changes"
-urls.Tracker = "https://github.com/gaborbernat/pypi_changes/issues"
-scripts.pypi-changes = "pypi_changes.__main__:main"
+type = [ "ty>=0.0.17", { include-group = "test" }, ]
+lint = [ "pre-commit-uv>=4.1.5", ]
+pkg-meta = [ "check-wheel-contents>=0.6.3", "twine>=6.2", "uv>=0.8.22", ]
 
 [tool.hatch]
 build.hooks.vcs.version-file = "src/pypi_changes/_version.py"
